# MedPlantsGPT

./: .gitignore  README.md  log.txt  parsing.ipynb  pyproject.toml
data/: farma.csv  harvest.json  name_to_coord.yml  name_to_region.yml  redbook.pickle
medplantsgpt/: chat.py  constants.py  create_index.ipynb  file.py  main.py  model.py  parse_pdf.ipynb  parsing_coord_for_map.ipynb  parsing_redbook.ipynb  prompts.py  temp.py
medplantsgpt/components/: sidebar.py
